# ros2_drone_core

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/ros2_drone_core/: px4_wrapper.hpp
launch/: system.launch.py
scripts/: README_Shell.md
src/: motion_node.cpp  px4_wrapper.cpp
